--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javaScript-blockchain",
+  "name": "dissertation-prototype",
   "version": "1.0.0",
   "description": "Learn Blockchain By Building Your Own In JavaScript",
   "main": "index.js",
@@ -11,15 +11,24 @@
     "node_4": "nodemon --watch dev -e js dev/networkNode.js 3004 http://localhost:3004",
     "node_5": "nodemon --watch dev -e js dev/networkNode.js 3005 http://localhost:3005"
   },
-  "author": "",
+  "author": "Abel Ombonyo",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "nodemon": "^1.17.3",
+    "express": "^4.18.1",
+    "nodemon": "^1.19.4",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "sha256": "^0.2.0",
     "uuid": "^3.2.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/walobwa/prototype.git"
+  },
+  "bugs": {
+    "url": "https://github.com/walobwa/prototype/issues"
+  },
+  "homepage": "https://github.com/walobwa/prototype#readme"
 }
